<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kindr_msgs</name>
  <version>1.0.0</version>
  <description>Kindr common msgs</description>
  <maintainer email="andrea.ostuni@polito.it">Andrea Ostuni</maintainer>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>
  <author email="pfankhauser@anybotics.com">Peter Fankhauser</author>
  <license>BSD</license>
  <url>https://github.com/andreaostuni/kindr_ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>


  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
