<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kindr_rviz_plugins</name>
  <version>1.0.0</version>
  <description>Plugins for visualizing kindr objects in rviz.</description>
  <maintainer email="andrea.ostuni@polito.it">Andrea Ostuni</maintainer>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>
  <license>BSD</license>
  <url>https://github.com/andreaostuni/kindr_ros</url>

  <url>none</url>
  <author email="rdiethelm@anybotics.com">Remo Diethelm</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>

  <depend>pluginlib</depend>
  <depend>resource_retriever</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>rviz_rendering</depend>
  <depend>kindr_msgs</depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <test_depend>gtest</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <!--   <test_depend>cmake_code_coverage</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
